objects/Project_Validation_Rule_Settings__c.object
<CustomObject><fields>
        <fullName>Manage_My_Time__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Manage My Time</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Prevent_Deleting_Closed_Projects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prevent Deleting Closed Projects</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Prevent_Editing_Closed_Projects__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used to control who can edit Projects after they have been closed. (Primary use case is for a manager or system admin to re-open a closed project for time entry.)</description>
        <label>Prevent Editing Closed Projects</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Prevent_Editing_Time_on_Closed_Projects__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used to control who can edit Project Time Entries after the project has been closed without reopening the project. (Primary use case is for a system admin or data loader.)</description>
        <label>Prevent Editing Time on Closed Projects</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ProjectActivityType__c</fullName>
        <label>ProjectActivityType</label>
        <length>255</length>
        <type>Text</type>
    </fields><customSettingsType>Hierarchy</customSettingsType><description>Used to manage the profiles and users that are subject to Project validation rules.</description><enableFeeds>false</enableFeeds><label>Project Validation Rule Settings</label><visibility>Protected</visibility></CustomObject>